Bug 739763 - Fix slow redirects query that with certain data distributions may cause long hangs on first page load. r=dietrich